--- a/index.html
+++ b/index.html
@@ -100,32 +100,32 @@
     drawBubbles();
 
     const animals={
-      A:{name:"Alligator",img:"https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nationalgeographic.com%2Fanimals%2Freptiles%2Ffacts%2Famerican-alligator&psig=AOvVaw1jUPCCe2JTcti3mLq-4YFh&ust=1758477986488000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCOiR3Zb3548DFQAAAAAdAAAAABAE"},
-      B:{name:"Bear",img:"https://www.google.com/imgres?q=Bear%0D%0A&imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F9%2F9e%2FOurs_brun_parcanimalierpyrenees_1.jpg&imgrefurl=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FBear&docid=_44HmSV8bjuyUM&tbnid=YgF2b3pSILBPjM&vet=12ahUKEwjPgcqr9-ePAxV91DgGHU6XMw8QM3oECBUQAA..i&w=800&h=600&hcb=2&ved=2ahUKEwjPgcqr9-ePAxV91DgGHU6XMw8QM3oECBUQAA"},
-      C:{name:"Cat",img:"https://source.unsplash.com/400x400/?cat"},
-      D:{name:"Dog",img:"https://source.unsplash.com/400x400/?dog"},
-      E:{name:"Elephant",img:"https://source.unsplash.com/400x400/?elephant"},
-      F:{name:"Fox",img:"https://source.unsplash.com/400x400/?fox"},
-      G:{name:"Giraffe",img:"https://source.unsplash.com/400x400/?giraffe"},
-      H:{name:"Horse",img:"https://source.unsplash.com/400x400/?horse"},
-      I:{name:"Iguana",img:"https://source.unsplash.com/400x400/?iguana"},
-      J:{name:"Jaguar",img:"https://source.unsplash.com/400x400/?jaguar"},
-      K:{name:"Kangaroo",img:"https://source.unsplash.com/400x400/?kangaroo"},
-      L:{name:"Lion",img:"https://source.unsplash.com/400x400/?lion"},
-      M:{name:"Monkey",img:"https://source.unsplash.com/400x400/?monkey"},
-      N:{name:"Newt",img:"https://source.unsplash.com/400x400/?newt"},
-      O:{name:"Owl",img:"https://source.unsplash.com/400x400/?owl"},
-      P:{name:"Panda",img:"https://source.unsplash.com/400x400/?panda"},
-      Q:{name:"Quail",img:"https://source.unsplash.com/400x400/?quail"},
-      R:{name:"Rabbit",img:"https://source.unsplash.com/400x400/?rabbit"},
-      S:{name:"Snake",img:"https://source.unsplash.com/400x400/?snake"},
-      T:{name:"Tiger",img:"https://source.unsplash.com/400x400/?tiger"},
-      U:{name:"Urial",img:"https://source.unsplash.com/400x400/?urial"},
-      V:{name:"Vulture",img:"https://source.unsplash.com/400x400/?vulture"},
-      W:{name:"Wolf",img:"https://source.unsplash.com/400x400/?wolf"},
-      X:{name:"Xerus",img:"https://source.unsplash.com/400x400/?xerus"},
-      Y:{name:"Yak",img:"https://source.unsplash.com/400x400/?yak"},
-      Z:{name:"Zebra",img:"https://source.unsplash.com/400x400/?zebra"}
+      A:{name:"Alligator",img:"Alligator.webp"},
+      B:{name:"Bear",img:"bear.jpg"},
+      C:{name:"Cat",img:"cat.jpg"},
+      D:{name:"Dog",img:"dog.jpg"},
+      E:{name:"Elephant",img:"elephant.jpg"},
+      F:{name:"Fox",img:"frog.jpg"},
+      G:{name:"Giraffe",img:"giraffe.jpg"},
+      H:{name:"Horse",img:"Horse.webp"},
+      I:{name:"Iguana",img:"iguana.webp"},
+      J:{name:"Jaguar",img:"jaguar.jpg"},
+      K:{name:"Kangaroo",img:"kangaroos.webp"},
+      L:{name:"Lion",img:"lion.jpg"},
+      M:{name:"Monkey",img:"monkey.jpg"},
+      N:{name:"Newt",img:"newts.jpg"},
+      O:{name:"Owl",img:"owl.jpg"},
+      P:{name:"Panda",img:"panda.jpg"},
+      Q:{name:"Quail",img:"quail.jpg"},
+      R:{name:"Rabbit",img:"rabbit.webp"},
+      S:{name:"Snake",img:"snake.jpg"},
+      T:{name:"Tiger",img:"tiger.jpg"},
+      U:{name:"Urial",img:"urail.jpg"},
+      V:{name:"Vulture",img:"vulture.jpg"},
+      W:{name:"Wolf",img:"wolf.jpg"},
+      X:{name:"Xerus",img:"xerus.jpg"},
+      Y:{name:"Yak",img:"yak.jpg"},
+      Z:{name:"Zebra",img:"zebra.jpg"}
     };
 
     const letters='ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
