--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       Q:{name:"Quail",img:"quail.jpg"},
       R:{name:"Rabbit",img:"rabbit.webp"},
       S:{name:"Snake",img:"snake.jpg"},
-      T:{name:"Tiger",img:"tiger.jpg"},
+      T:{name:"Tiger",img:"tiger2.webp"},
       U:{name:"Urial",img:"urail.jpg"},
       V:{name:"Vulture",img:"vulture.jpg"},
       W:{name:"Wolf",img:"wolf.jpg"},
