--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       C:{name:"Cat",img:"cat.jpg"},
       D:{name:"Dog",img:"dog.jpg"},
       E:{name:"Elephant",img:"elephant.jpg"},
-      F:{name:"Fox",img:"frog.jpg"},
+      F:{name:"Frog",img:"frog.jpg"},
       G:{name:"Giraffe",img:"giraffe.jpg"},
       H:{name:"Horse",img:"Horse.webp"},
       I:{name:"Iguana",img:"iguana.webp"},
